<resources>
    <string name="app_name">BiaTechTestApp</string>
    <string name="try_again">Попробовать снова</string>
    <string name="see_details">Посмотреть детали</string>
    <string name="work_done">Работа Выполнена</string>
    <string name="work_done_description">Задание было успешно выполнено</string>
    <string name="current_task_text">Текущее задание</string>
    <string name="type_product">Тип груза</string>
    <string name="сity">Город исполнения</string>
    <string name="date">дата заказа</string>
    <string name="time">Время прибытия</string>
    <string name="startLocatioin">Начальная точка маршрута</string>
    <string name="endLocation">Конечная точка маршрута</string>
    <string name="type_сarcase">Тип кузова</string>
    <string name="task_detail">Детали заказа</string>
    <string name="task_parameters">Параметры заказа</string>
    <string name="contacts">Контакты</string>
    <string name="parameters_text">Параметры по оплате</string>
    <string name="details_text">Детали заказа</string>
    <string name="client_rules">Правила клиента</string>
    <string name="download">Скачать</string>
    <string name="incident_text">Инцидент</string>
    <string name="error_text">Ошибка</string>
    <string name="add_docs_text">Прикрепить документы</string>
    <string name="complete_task_text">Завершить заказ</string>
    <string name="refuse_text">Отказаться от задания</string>
    <string name="complete_task_hint">Для завершения заказа необходимо прикрепить документы</string>
    <string name="accept_text">Принять</string>
    <string name="decline_text">Отказаться</string>
    <string name="number_of_tabel">Табельный №</string>
    <string name="mobile_number">Номер телефона</string>
    <string name="nationality_text">Гражданство</string>
    <string name="car_text">Машина</string>
    <string name="car_numbers">Номера</string>
    <string name="sick_list">Больничный лист</string>
    <string name="notification">Оповещения</string>
    <string name="log_out_text">Выйти</string>
    <string name="login">Войти</string>
    <string name="tasks_text">задачи</string>
    <string name="schedule_text">графики</string>
    <string name="chat_text">чат</string>
    <string name="profile_text">профиль</string>
</resources>