<?xml version="1.0" encoding="utf-8"?>
<com.example.biatechtestapp.core.ResultView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="152dp"
            android:layout_gravity="center|top"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_gravity="center|top"
                android:layout_marginTop="12dp"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/fioTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="92dp"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Петров Иван Алексеевич" />

            <TextView
                android:id="@+id/roleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="112dp"
                android:textColor="@color/dark_gray"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="Водитель" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="24dp"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/number_of_tabel"
                    android:textColor="@color/grayNormal"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/numberOfTabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/dark"
                    android:textSize="14sp"
                    tools:text="Мебель" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/grayNormal"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/mobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/dark"
                    android:textSize="14sp"
                    tools:text="Мебель" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/nationality_text"
                    android:textColor="@color/grayNormal"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/nationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/dark"
                    android:textSize="14sp"
                    tools:text="Мебель" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/car_text"
                    android:textColor="@color/grayNormal"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/dark"
                    android:textSize="14sp"
                    tools:text="Мебель" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/car_numbers"
                    android:textColor="@color/grayNormal"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/carNumbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/dark"
                    android:textSize="14sp"
                    tools:text="Мебель" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/acceptedContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sickListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/sick_list"
                android:textAllCaps="false"
                android:textColor="@color/dark"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_sparrow_right"
                app:iconGravity="end"
                app:iconTint="@color/dark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notificationsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/notification"
                android:textAllCaps="false"
                android:textColor="@color/dark"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_sparrow_right"
                app:iconGravity="end"
                app:iconTint="@color/dark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logOutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:text="@string/log_out_text"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_sparrow_right"
                app:iconGravity="end"
                app:iconTint="@color/red" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>

</com.example.biatechtestapp.core.ResultView>